NTP: Fix layout flicker due to login header.
Also, simplify the CSS and markup and make it RTL aware.

BUG=60072
TEST=Login to sync and your user name should show up on the NTP.

Review URL: http://codereview.chromium.org/4018005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@63374 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1e6b480fd87cb95ddb217dc734984589ca6f87af

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -29,7 +29,6 @@ body.loading #main {
 }
 
 #main,
-#login-container,
 .section,
 .maxiview {
   width: 920px;
@@ -281,11 +280,10 @@ html[anim=true][enable-section-animations=true] .section {
 }
 
 #login-container {
-  position: relative;
-}
-#login {
-  position: absolute;
-  right: 0;
+  display: none;
+  height: 0;  /* This should not take any vertical space and this simpler than
+                 position absolute which changes the width to intrinsic */
+  text-align: end;
 }
 
 .section.disabled,
